<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="right"
        >
        <EditText
            android:id="@+id/name_edit_text"
            android:hint="@string/input_enter_full_name"
            style="@style/edit_text"
            />
        <TextView
            style="@style/title_text"
            android:text="@string/toppings"
            />
        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            android:onClick="setWhippedCream"
            android:text="@string/checkbox_whipped_cream"
            style="@style/checkbox_text"
            />
        <CheckBox
            android:id="@+id/chocolate_check_box"
            style="@style/checkbox_text"
            android:layout_marginBottom="16dp"
            android:onClick="setHasChocolate"
            android:text="@string/checkbox_chocolate"
            />


        <TextView
            style="@style/title_text"
            android:text="@string/title_quantity"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            >
            <Button
                android:onClick="increment"
                android:text="+"
                style="@style/button_small"
                />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                android:textColor="#000"
                android:textStyle="bold"
                style="@style/base_text"
                />
            <Button
                android:onClick="decrement"
                android:text="-"
                style="@style/button_small"

                />
        </LinearLayout>
        <Button
            android:onClick="submitOrder"
            android:text="@string/button_order"
            style="@style/button_order"
            />

    </LinearLayout>
</ScrollView>